fix: menu overlapping issue due to z-index

--- a/app/src/components/Nav/nav.css
+++ b/app/src/components/Nav/nav.css
@@ -10,10 +10,11 @@ nav {
     top: 0;
     bottom: 0;
     padding: 0.5rem;
+    z-index: 1;
 }
 
 .buguer {
-    z-index: 1;
+    z-index: 2;
     display: none;
     width: 2rem;
     height: 2rem;
